# parallel_lab3

./: .gitignore  main.py  pyproject.toml
logs/: output_MPI_16_procs_run10_16797.out  output_MPI_16_procs_run10_16902.out  output_MPI_16_procs_run10_24067.out  output_MPI_16_procs_run1_16788.out  output_MPI_16_procs_run1_16893.out  output_MPI_16_procs_run1_24058.out  output_MPI_16_procs_run2_16789.out  output_MPI_16_procs_run2_16894.out  output_MPI_16_procs_run2_24059.out  output_MPI_16_procs_run3_16790.out  output_MPI_16_procs_run3_16895.out  output_MPI_16_procs_run3_24060.out  output_MPI_16_procs_run4_16791.out  output_MPI_16_procs_run4_16896.out  output_MPI_16_procs_run4_24061.out  output_MPI_16_procs_run5_16792.out  output_MPI_16_procs_run5_16897.out  output_MPI_16_procs_run5_24062.out  output_MPI_16_procs_run6_16793.out  output_MPI_16_procs_run6_16898.out  output_MPI_16_procs_run6_24063.out  output_MPI_16_procs_run7_16794.out  output_MPI_16_procs_run7_16899.out  output_MPI_16_procs_run7_24064.out  output_MPI_16_procs_run8_16795.out  output_MPI_16_procs_run8_16900.out  output_MPI_16_procs_run8_24065.out  output_MPI_16_procs_run9_16796.out  output_MPI_16_procs_run9_16901.out  output_MPI_16_procs_run9_24066.out  output_MPI_1_procs_run10_16862.out  output_MPI_1_procs_run10_24027.out  output_MPI_1_procs_run1_16748.out  output_MPI_1_procs_run1_16853.out  output_MPI_1_procs_run1_24018.out  output_MPI_1_procs_run2_16854.out  output_MPI_1_procs_run2_24019.out  output_MPI_1_procs_run3_16855.out  output_MPI_1_procs_run3_23920.out  output_MPI_1_procs_run3_24020.out  (+230 more)
(+163 files in other folders)
